env file fixed with

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-FIREBASE_API_KEY=AIzaSyALt3O9XjU7BZDds9Pux9uyL3qhCUHwxyo
-FIREBASE_AUTH_DOMAIN=scribble-1afff.firebaseapp.com
-FIREBASE_PROJECT_ID=scribble-1afff
-FIREBASE_STORAGE_BUCKET=scribble-1afff.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=202050640337
-FIREBASE_APP_ID=1:202050640337:web:aa01e85426fd59a6d168f0
+FIREBASE_API_KEY="AIzaSyALt3O9XjU7BZDds9Pux9uyL3qhCUHwxyo"
+FIREBASE_AUTH_DOMAIN="scribble-1afff.firebaseapp.com"
+FIREBASE_PROJECT_ID="scribble-1afff"
+FIREBASE_STORAGE_BUCKET="scribble-1afff.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID="202050640337"
+FIREBASE_APP_ID="1:202050640337:web:aa01e85426fd59a6d168f0"
